// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TrackDetail > matches the snapshot 1`] = `
"<div class="trackDetails">
  <div class="imageWrapper">
    <div class="preloadImage">
      <div><span class="placeholder"></span><span><span class="loader"></span><span class="visually-hidden">Loading image</span></span></div><img src="coverArt" alt="Image" style="display: none;">
    </div>
    <div class="mediaOptions"><button class="iconButton playButton playButton" type="button" title="Play Song">
        <phplay class="icon" aria-hidden="true" size="24" weight="duotone"></phplay><span class="text visually-hidden"> Play Song </span>
      </button></div>
  </div>
  <div class="trackMeta">
    <p><a>album</a></p>
    <p class="strong">title</p>
    <div class="secondaryMeta">
      <ul class="meta list">
        <li class="listItem" data-test-id="artist-list-item"><a>name</a></li>
        <li class="listItem" data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
      <p class="duration">00:19</p>
    </div>
  </div>
</div>"
`;

exports[`TrackDetail > when inMediaPlayer prop is set to true > matches the snapshot 1`] = `
"<div class="trackDetails mediaPlayer">
  <div class="imageWrapper">
    <div class="preloadImage">
      <div><span class="placeholder"></span><span><span class="loader"></span><span class="visually-hidden">Loading image</span></span></div><img src="coverArt" alt="Image" style="display: none;">
    </div>
    <!--v-if-->
  </div>
  <div class="trackMeta">
    <p><a>album</a></p>
    <p class="strong">title</p>
    <div class="secondaryMeta">
      <ul class="meta list">
        <li class="listItem" data-test-id="artist-list-item"><a>name</a></li>
        <li class="listItem" data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
      <p class="duration">00:19</p>
    </div>
  </div>
</div>"
`;

exports[`TrackDetail > when isCurrentTrack prop is set to true > matches the snapshot 1`] = `
"<div class="trackDetails">
  <div class="imageWrapper">
    <div class="preloadImage">
      <div><span class="placeholder"></span><span><span class="loader"></span><span class="visually-hidden">Loading image</span></span></div><img src="coverArt" alt="Image" style="display: none;">
    </div>
    <div class="mediaOptions">
      <div class=""><span class="playingLoader"><span class="loading"><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visually-hidden"> Playing current track queue-track-0</span></span>
        <div class="playPauseButton"><span><span class="loader"></span><span class="visually-hidden">Loading data</span></span></div>
      </div>
    </div>
  </div>
  <div class="trackMeta">
    <p><a>album</a></p>
    <p class="strong">title</p>
    <div class="secondaryMeta">
      <ul class="meta list">
        <li class="listItem" data-test-id="artist-list-item"><a>name</a></li>
        <li class="listItem" data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
      <p class="duration">00:19</p>
    </div>
  </div>
</div>"
`;

exports[`TrackDetail > when isCurrentTrack prop is set to true > when isCurrentTrackPlaying prop is set to true > matches the snapshot 1`] = `
"<div class="trackDetails">
  <div class="imageWrapper">
    <div class="preloadImage">
      <div><span class="placeholder"></span><span><span class="loader"></span><span class="visually-hidden">Loading image</span></span></div><img src="coverArt" alt="Image" style="display: none;">
    </div>
    <div class="mediaOptions">
      <div class="playing"><span class="playingLoader"><span class="loading"><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visually-hidden"> Playing current track queue-track-0</span></span>
        <div class="playPauseButton"><span><span class="loader"></span><span class="visually-hidden">Loading data</span></span></div>
      </div>
    </div>
  </div>
  <div class="trackMeta">
    <p><a>album</a></p>
    <p class="strong">title</p>
    <div class="secondaryMeta">
      <ul class="meta list">
        <li class="listItem" data-test-id="artist-list-item"><a>name</a></li>
        <li class="listItem" data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
      <p class="duration">00:19</p>
    </div>
  </div>
</div>"
`;

exports[`TrackDetail > when isCurrentTrack prop is set to true > when trackCanPlay prop is set to true > matches the snapshot 1`] = `
"<div class="trackDetails">
  <div class="imageWrapper">
    <div class="preloadImage">
      <div><span class="placeholder"></span><span><span class="loader"></span><span class="visually-hidden">Loading image</span></span></div><img src="coverArt" alt="Image" style="display: none;">
    </div>
    <div class="mediaOptions">
      <div class="trackCanPlay"><span class="playingLoader"><span class="loading"><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visually-hidden"> Playing current track queue-track-0</span></span>
        <div class="playPauseButton"><span><span class="loader"></span><span class="visually-hidden">Loading data</span></span></div>
      </div>
    </div>
  </div>
  <div class="trackMeta">
    <p><a>album</a></p>
    <p class="strong">title</p>
    <div class="secondaryMeta">
      <ul class="meta list">
        <li class="listItem" data-test-id="artist-list-item"><a>name</a></li>
        <li class="listItem" data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
      <p class="duration">00:19</p>
    </div>
  </div>
</div>"
`;

exports[`TrackDetail > when track album and albumId are defined > matches the snapshot 1`] = `
"<div class="trackDetails">
  <div class="imageWrapper">
    <div class="preloadImage">
      <div><span class="placeholder"></span><span><span class="loader"></span><span class="visually-hidden">Loading image</span></span></div><img src="coverArt" alt="Image" style="display: none;">
    </div>
    <div class="mediaOptions"><button class="iconButton playButton playButton" type="button" title="Play Song">
        <phplay class="icon" aria-hidden="true" size="24" weight="duotone"></phplay><span class="text visually-hidden"> Play Song </span>
      </button></div>
  </div>
  <div class="trackMeta">
    <p><a>album</a></p>
    <p class="strong">title</p>
    <div class="secondaryMeta">
      <ul class="meta list">
        <li class="listItem" data-test-id="artist-list-item"><a>name</a></li>
        <li class="listItem" data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
      <p class="duration">00:19</p>
    </div>
  </div>
</div>"
`;

exports[`TrackDetail > when track album is undefined > matches the snapshot 1`] = `
"<div class="trackDetails">
  <div class="imageWrapper">
    <div class="preloadImage">
      <div><span class="placeholder"></span><span><span class="loader"></span><span class="visually-hidden">Loading image</span></span></div><img src="coverArt" alt="Image" style="display: none;">
    </div>
    <div class="mediaOptions"><button class="iconButton playButton playButton" type="button" title="Play Song">
        <phplay class="icon" aria-hidden="true" size="24" weight="duotone"></phplay><span class="text visually-hidden"> Play Song </span>
      </button></div>
  </div>
  <div class="trackMeta">
    <!--v-if-->
    <p class="strong">title</p>
    <div class="secondaryMeta">
      <ul class="meta list">
        <li class="listItem" data-test-id="artist-list-item"><a>name</a></li>
        <li class="listItem" data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
      <p class="duration">00:19</p>
    </div>
  </div>
</div>"
`;

exports[`TrackDetail > when track albumId is undefined > matches the snapshot 1`] = `
"<div class="trackDetails">
  <div class="imageWrapper">
    <div class="preloadImage">
      <div><span class="placeholder"></span><span><span class="loader"></span><span class="visually-hidden">Loading image</span></span></div><img src="coverArt" alt="Image" style="display: none;">
    </div>
    <div class="mediaOptions"><button class="iconButton playButton playButton" type="button" title="Play Song">
        <phplay class="icon" aria-hidden="true" size="24" weight="duotone"></phplay><span class="text visually-hidden"> Play Song </span>
      </button></div>
  </div>
  <div class="trackMeta">
    <!--v-if-->
    <p class="strong">title</p>
    <div class="secondaryMeta">
      <ul class="meta list">
        <li class="listItem" data-test-id="artist-list-item"><a>name</a></li>
        <li class="listItem" data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
      <p class="duration">00:19</p>
    </div>
  </div>
</div>"
`;

exports[`TrackDetail > when track artists is an empty array > matches the snapshot 1`] = `
"<div class="trackDetails">
  <div class="imageWrapper">
    <div class="preloadImage">
      <div><span class="placeholder"></span><span><span class="loader"></span><span class="visually-hidden">Loading image</span></span></div><img src="coverArt" alt="Image" style="display: none;">
    </div>
    <div class="mediaOptions"><button class="iconButton playButton playButton" type="button" title="Play Song">
        <phplay class="icon" aria-hidden="true" size="24" weight="duotone"></phplay><span class="text visually-hidden"> Play Song </span>
      </button></div>
  </div>
  <div class="trackMeta">
    <p><a>album</a></p>
    <p class="strong">title</p>
    <div class="secondaryMeta">
      <!--v-if-->
      <p class="duration">00:19</p>
    </div>
  </div>
</div>"
`;
